# python-dmiparser

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tox.ini
dmiparser/: __init__.py  __main__.py  dmiparser.py
dmiparser/dmidecoder/: __init__.py  __main__.py  dmidecoder.py
dmiparser/wrapper/: __init__.py  dmidecode.py  dmidecoder.py
examples/: dmidecode.py
tests/: dmidecode_10.txt  dmidecode_13.txt  dmidecode_148.txt  dmidecode_32.txt  dmidecode_9.txt  dmidecode_full.txt  test_dmidecode_10.py  test_dmidecode_13.py  test_dmidecode_148.py  test_dmidecode_32.py  test_dmidecode_9.py  test_dmidecode_full.py  test_dmiparser.py
