[metadata]
name = dmiparser
version = attr: dmiparser.__version__
url = https://github.com/Arondight/python-dmiparser
download_url = https://github.com/Arondight/python-dmiparser/releases
author = Qin Fandong
author_email = shell_way@foxmail.com
description = This parse dmidecode output to JSON
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = Any
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
tests_require = pytest==2.9.2
setup_requires = pytest-runner

[aliases]
test = pytest

