[metadata]
author = Qin Fandong
author_email = shell_way@foxmail.com
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
description = This parse dmidecode output to JSON text
download_url = https://github.com/Arondight/python-dmiparser/tags
license = MIT License
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = dmiparser
platforms = Any
url = https://github.com/Arondight/python-dmiparser
version = attr: dmiparser.__version__

[options]
include_package_data = True
install_requires =
packages = find:
scripts =
  bin/dmiparser
setup_requires = pytest-runner
tests_require = pytest
zip_safe = True

[aliases]
test = pytest
